# RISC0-PSI

./: hardhat.config.js  package-lock.json  package.json  rust-toolchain.toml
contracts/: EvenNumber.sol  IEvenNumber.sol  Token.sol  ZKTokenVerfier.sol
host/src/: main.rs
methods/: Cargo.toml
methods/guest/: Cargo.toml
methods/prover/: prove.rs
methods/src/: lib.rs
tests/: ZKTokenVerfier.js
