[package]
name = "guests"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "is-even"
path = "src/bin/is_even.rs"

[workspace]

[dependencies]
alloy-primitives = { version = "=0.8.3", default-features = false, features = ["rlp", "serde", "std"] }
alloy-sol-types = { version = "=0.8.3" }
risc0-zkvm = { version = "1.1", default-features = false, features = ['std'] }

ethers = { version = "2.0", features = ["rustls"] }
tokio = { version = "1.0", features = ["full"] }
dotenv = "0.15"

[build-dependencies]
risc0-build = "0.17"

[package.metadata.risc0]
methods = ["guest"]
serde = { version = "1.0", features = ["derive"] }

[profile.release]
lto = "thin"
