[package]
name = "guests"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "is-even"
path = "src/bin/is_even.rs"

[workspace]

[dependencies]
alloy-primitives = { version = "0.8" }
alloy-sol-types = { version = "0.8" }
risc0-steel = { version = "0.10.0" }
risc0-zkvm = { git = "https://github.com/risc0/risc0", branch = "main", default-features = false, features = ["std"] }
ethers = { version = "2.0", features = ["rustls"] }
tokio = { version = "1.0", features = ["full"] }
dotenv = "0.15"
eyre = "0.6"
bincode = "1.3"
serde = { version = "1.0", features = ["derive"] }
[build-dependencies]
risc0-build = "0.17"

[package.metadata.risc0]
methods = ["guest"]
serde = { version = "1.0", features = ["derive"] }

[profile.release]
lto = "thin"
